# Correctify

./: .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  BUILD_LINUX_ARM64.md  CHANGELOG.md  README.md  _tools  biome.json  index.html  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/: changelog-config.json
.github/workflows/: auto-tag.yml  build.yml  deploy-pages.yml  gh-pages.yml  release-on-commit.yml  release.yml  test-build.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/cache/eslint/: .cache_1iticq
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 13.js  21.js  234.js  345.js  428.js  54.js  559.js  619.js  710.js  739.js  808.js  885.js  904.js
.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json
.next/static/chunks/: 0.21abf3d35624b6ec.js  171-aae79f2177223328.js  3.02e8a08f71358e40.js  308-aab6f8c39927c651.js  397.1467978880d1fc76.js  (+9 more)
.next/types/: routes.d.ts  validator.ts
__tests__/components/: APIModal.test.tsx
__tests__/lib/: ollama.test.ts  openai.test.ts
__tests__/snapshots/: corrections.test.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
components/: APIModal.tsx  AboutModal.tsx  DraggableHeader.tsx  HelpModal.tsx  SettingsModal.tsx  UpdateModal.tsx  UsageModal.tsx
docs/: index.html
lib/: llm.ts  models.ts  ollama.ts  openai.ts  prompts.ts  secure-keys.ts  types.ts  updater.ts  usage-tracker.ts  useLocale.ts  useLocale.tsx  useTheme.ts  utils.ts
lib/locales/: de.json  en.json  fr.json  tr.json
public/: site.webmanifest
scripts/: build-linux-arm64.sh  build-signed.sh  sync-pages.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
